src/components/accordian/style.css
.wrapper {
  width: 100vw;
  height: 100vh;
  margin-top: 50px;
}

.dataItem {
  width: 500px;
  margin: 10px auto;
}

.title,
.answer {
  background-color: rgb(42, 23, 112);
  padding: 20px;
  display: flex;
  justify-content: space-between;
  color: white;
}

.btn-grp {
  width: 100%;
  text-align: center;
}

.btn-grp button {
  padding: 10px 20px;
  font-size: 1.3rem;
  font-weight: bold;
  margin: 10px;
  color: white;

  background-color: rgb(42, 23, 112) !important;
}

.not-active {
  border: 1px black solid;
  background-color: rgb(61, 57, 75) !important;
}

/* .active {
} */

.title {
  cursor: pointer;
  font-weight: bold;
  font-size: 1.2rem;
}

.answer {
  font-size: 1.1rem;
}

